<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background"
    tools:context=".ui.activity.SplashActivity">

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_am_logo_large"
        android:layout_marginTop="80dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ivSplashText"/>

    <ImageView
        android:id="@+id/ivSplashText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@mipmap/ic_am_splash_text"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"/>

    <ImageView
        android:id="@+id/ivIndicator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_indicator"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateMyProfile"/>

    <Button
        android:id="@+id/btnCreateMyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_btn_orange"
        android:textAlignment="center"
        android:minHeight="70dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/create_my_profile"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/din_next_lt_pro_bold_condensed"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSkip"/>

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_skip_sign_up_btn"
        android:textAlignment="center"
        android:text="@string/skip"
        android:minHeight="70dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/din_next_lt_pro_bold_condensed"
        android:textColor="@color/colorGrey"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTermsService"/>

    <TextView
        android:id="@+id/tvTermsService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAllCaps="false"
        android:fontFamily="@font/din_next_lt_pro_medium_cond"
        android:text="@string/terms_of_service"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>